[tool.poetry]
name = "langgraph-text-to-sql"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
langchain = "^0.2.12"
langchain-openai = "^0.1.21"
langchain-community = "^0.2.11"
langgraph = "^0.2.3"
langsmith = "^0.1.98"
pillow = "^10.4.0"
sqlalchemy = "^2.0.32"
snowflake-sqlalchemy = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
